--- a/pages/index.css
+++ b/pages/index.css
@@ -1,1 +1,19 @@
+@import url(../vendor/normalise.css);
+@import url(../block/page/page.css);
+@import url(../block/header/header.css);
+@import url(../block/header/__title/header__title.css);
+@import url(../block/movies/movie.css);
+@import url(../block/modal/modal.css);
+@import url(../block/modal/__content/modal__content.css);
+@import url(../block/modal/__button/modal__button.css);
+@import url(../block/modal/__description/modal__description.css);
+@import url(../block/modal/__images/modal__images.css);
+@import url(../block/modal/__price/modal__price.css);
+@import url(../block/modal/__rating/modal__rating.css);
+@import url(../block/modal/__text/modal__text.css);
+@import url(../block/modal/__title/modal__title.css);
+@import url(../block/seat/seat.css);
+@import url(../block/seats/seats.css);
+@import url(../block/close/close.css);
+@import url(../block);
 @import url(../block);
