--- a/block/header/header.css
+++ b/block/header/header.css
@@ -1,4 +1,5 @@
 .header {
+    background: -o-linear-gradient(45deg, rgba(255, 255, 255, .05), rgba(205, 140, 56, .15));
     background: linear-gradient(45deg, rgba(255, 255, 255, .05), rgba(205, 140, 56, .15));
     text-align: center;
     color: #fff;
