--- a/block/modal/__content/modal__content.css
+++ b/block/modal/__content/modal__content.css
@@ -5,11 +5,12 @@
     margin: 50px auto;
     padding: 20px;
     color: #FFF;
-    width: 80%;
-    max-width: 1024px;
+    max-width: 1080px;
     background-color: #1e1f26;
     border-radius: 5px;
+    -webkit-animation: slideDownFadeIn 0.5s forwards;
     animation: slideDownFadeIn 0.5s forwards;
+    display: -ms-grid;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-areas:
@@ -20,11 +21,40 @@
         "images text"
         "images seats"
         "images price"
-        "images button";
+        "images form"
+        "button button";
+}
+
+@media screen and (max-width: 1060px) {
+    .modal__content {
+        grid-template-columns: 40% 60%;
+    }
 }
 
 @media screen and (max-width: 768px) {
     .modal__content {
         max-width: 500px;
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .modal__content {
+        place-content: center;
+        padding: 0;
+        margin: 0;
+        grid-template-columns: 90%;
+        grid-template-areas:
+            "close"
+            "images"
+            "Title"
+            "description"
+            "rating"
+            "text"
+            "seats"
+            "price"
+            "form"
+            "button";
+        gap: 15px;
     }
 }
