--- a/block/modal/__text/modal__text.css
+++ b/block/modal/__text/modal__text.css
@@ -1,3 +1,9 @@
 .modal__text {
     grid-area: text;
 }
+
+@media screen and (max-width: 500px) {
+    .modal__text {
+        text-align: center;
+    }
+}
