--- a/block/movies/__card/movie__card.css
+++ b/block/movies/__card/movie__card.css
@@ -1,10 +1,16 @@
 .movie__card {
     cursor: pointer;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
     border-radius: 32px;
     padding: 22px;
     text-align: center;
     position: relative;
+    background: -o-linear-gradient(45deg, rgba(255, 255, 255, .05), rgba(205, 140, 56, .15));
     background: linear-gradient(45deg, rgba(255, 255, 255, .05), rgba(205, 140, 56, .15));
 }
