--- a/block/seat/seat.css
+++ b/block/seat/seat.css
@@ -4,9 +4,10 @@
     border-radius: 2px;
     width: 19px;
     text-align: center;
+    -webkit-transition: all 0.4s ease;
+    -o-transition: all 0.4s ease;
     transition: all 0.4s ease;
     background-color: #1e1f26;
-    color: #cd8c38;
-    border: 1px solid #cd8c38;
+    border: 1px solid #FFF;
     cursor: pointer;
 }
