--- a/pages/index.css
+++ b/pages/index.css
@@ -12,8 +12,9 @@
 @import url(../block/modal/__rating/modal__rating.css);
 @import url(../block/modal/__text/modal__text.css);
 @import url(../block/modal/__title/modal__title.css);
+@import url(../block/button/button.css);
 @import url(../block/seat/seat.css);
 @import url(../block/seats/seats.css);
+@import url(../block/label/label.css);
 @import url(../block/close/close.css);
-@import url(../block);
-@import url(../block);
+@import url(../block/nav/nav.css);
